add user login & css,js,taglib common file

--- a/tsl-admin/src/main/resources/errors.properties
+++ b/tsl-admin/src/main/resources/errors.properties
@@ -1,2 +1,4 @@
 value.exists=value ({0}) exists
 pk.cant.empty=primary key can not empty
+username.not.exists=username ({0}) not exists
+password.not.eq=password error
