--- a/tsl-admin/src/main/webapp/WEB-INF/web.xml
+++ b/tsl-admin/src/main/webapp/WEB-INF/web.xml
@@ -82,16 +82,16 @@
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
-        <!--<init-param>-->
-        <!--<param-name>throwExceptionIfNoHandlerFound</param-name>-->
-        <!--<param-value>true</param-value>-->
-        <!--</init-param>-->
-        <!--<multipart-config>-->
-        <!-- 5MB -->
-        <!--<max-file-size>5242880</max-file-size>-->
-        <!-- 25MB -->
-        <!--<max-request-size>26214400</max-request-size>-->
-        <!--</multipart-config>-->
+        <init-param>
+            <param-name>throwExceptionIfNoHandlerFound</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <multipart-config>
+         <!--5MB -->
+        <max-file-size>5242880</max-file-size>
+         <!--25MB -->
+        <max-request-size>26214400</max-request-size>
+        </multipart-config>
     </servlet>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
