--- a/tsl-admin/src/main/resources/errors.properties
+++ b/tsl-admin/src/main/resources/errors.properties
@@ -2,3 +2,9 @@ value.exists=value ({0}) exists
 pk.cant.empty=primary key can not empty
 username.not.exists=username ({0}) not exists
 password.not.eq=password error
+
+
+save.success=save success
+update.success=update success
+remove.success=remove success
+valid.failed=valid failed
