1. left menu (level 2) 2. sys menu model 3. add .tree-node style 4. tree defaults method 'get'

--- a/tsl-admin/src/main/resources/errors.properties
+++ b/tsl-admin/src/main/resources/errors.properties
@@ -4,7 +4,11 @@ username.not.exists=username ({0}) not exists
 password.not.eq=password error
 
 
-save.success=save success
-update.success=update success
-remove.success=remove success
-valid.failed=valid failed
+get.success=get ({0}) success
+save.success=save ({0}) success
+update.success=update ({0}) success
+query.success=query ({0}) success
+query.tree.success=query ({0}) tree success
+query.tree.children.success=query ({0}) tree children success
+remove.success=remove ({0}) success
+valid.failed=valid ({0}) failed
