--- a/tsl-admin/src/main/resources/errors.properties
+++ b/tsl-admin/src/main/resources/errors.properties
@@ -3,6 +3,9 @@ pk.cant.empty=primary key can not empty
 username.not.exists=username ({0}) not exists
 password.not.eq=password error
 
+model.sys_menu=menu
+model.sys_perm=permisssion
+
 
 get.success=get ({0}) success
 save.success=save ({0}) success
